[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitrii"]
readme = "README.md"
repository = "https://github.com/Namoralnovolevih/python-project-49.git"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-cacl = "brain_games.scripts.brain_cacl:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.classifiers]
python_versions = ">=3.6, <3.11"
operating_systems = "OS Ubuntu"
